some more adjustments for thutcore/test code